<resources>
	<string name="app_name">CrunchCastStatistics</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="statistics_title">Statistics</string>
	<string name="statistics_views">Views</string>
	<string name="statistics_duration">Duration</string>
	<string name="statistics_uploads">Uploads</string>
	<string name="statistics_savings">Savings</string>
	<string name="statistics_usage">Usage</string>
	<string name="statistics_all">All</string>
	<string name="statistics_mobile">Mobile</string>
	<string name="statistics_wifi">Wifi</string>
	<string name="statistics_saved">Saved</string>
	<string name="statistics_fetching_data_error">An error occurred, please try again</string>

	<string name="empty"/>

</resources>
